fixed padding, removed cursor-pointer collapse-title

--- a/app/globals.css
+++ b/app/globals.css
@@ -25,3 +25,7 @@ body {
     )
     rgb(var(--background-start-rgb));
 } */
+
+.collapse-title {
+  cursor: auto !important;
+}
